--- a/AUTHORS
+++ b/AUTHORS
@@ -2,11 +2,13 @@ Maintainers
 -----------
 PDSL, Nagoya University <http://www.pdsl.jp>
 PFLab, The University of Tokyo <http://www.pf.is.s.u-tokyo.ac.jp>
+AI369, Inc. <http://www.ai369.com>
 AXE, Inc. <http://www.axe-inc.co.jp>
 Tier IV, Inc. <http://www.tier4.jp>
 
 Developers
 ----------
+Kazi Saabique AHmed, AI369, Inc.
 Tomohito ANDO, Nagoya University - Tier IV (Nav IV)
 Yamato ANDO, Univeristy of Tsukuba - Tier IV
 Akihiro ARITOSHI, The University of Tokyo - Tier IV (Map IV)
